--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0"
   },
